# SGX-enclave-to-enclave-ra

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  SGX_enclave_to_enclave_ra.cbp  config.toml  main.cpp
archive/: ias.cpp
archive/crypto/: CMakeLists.txt  crypto.c
archive/isv/: CMakeLists.txt  do_attestation.cpp  isv_app.cpp
archive/sp/: CMakeLists.txt  loop_routine.cpp  sp_app.cpp
cmake/: FindSGX.cmake  FindSGXSSL.cmake
crypto/: CMakeLists.txt
ias_http/: CMakeLists.txt  app.cpp  app.h
isv/: CMakeLists.txt  ISV_Attestation.h  client.cpp  config.cpp  config.h  do_attestation.cpp  do_attestation.h  isv_app.cpp  isv_attestation.h  quote_size.c  sgx_detect_linux.c  sgx_stub.c
isv/Enclave/: Enclave.cpp  Enclave.edl
isv/isv_enclave/: isv_enclave.cpp  isv_enclave.h
isv/sgx_detect/: sgx_detect_linux.c
p2p_app/: business.cpp  business.h  config.cpp  config.h  isv_att_enclave.hpp  p2p_app.cpp  sp_att_enclave.hpp  sp_ocalls.cpp
p2p_app/ias_request/: CMakeLists.txt  ias_request.hpp
p2p_app/ias_request/http_agent/: agent.h  agent_wget.hpp
p2p_app/ias_request/httpparser/: httpresponseparser.h
p2p_enclave/: app_enclave.cpp  isv_enclave.cpp  p2p_enclave.config.xml  p2p_enclave.edl  p2p_enclave_private.pem  sp_enclave.cpp  sp_enclave.edl  sp_routines.cpp  sp_routines.h
p2p_enclave/utils/: base64.cpp  cert_utils.cpp  cert_utils.h  crypto_utils.h  io.h  json.hpp  urldecode.cpp  urldecode.h
protocol/: error.h  protocol.h
service_provider/: CMakeLists.txt  sp.cpp  trusted.cpp
service_provider/ias_request/: CMakeLists.txt  agent_wget.h  ias_request.cpp  ias_request.h
sp/: CMakeLists.txt  config.cpp  config.h  enclave_verify.c  ias.cpp  ias.h  loop_routine.cpp  loop_routine.h  sp_app.cpp  sp_attestation.h  sp_ocalls.cpp  sp_ocalls.h  tmp_config.cpp  tmp_config.h
sp/ias_request/: CMakeLists.txt  agent.h  agent_wget.cpp  agent_wget.h  ias_request.cpp  ias_request.h
sp/key_exchange_message/: CMakeLists.txt  key_exchange_message.cpp  key_exchange_message.h  message_receive.cpp  message_send.cpp
sp/sp_enclave/: common.h  crypto_utils.cpp  crypto_utils.h  sp_enclave.cpp  sp_enclave.edl  sp_routines.cpp  sp_routines.h  trust_policy.h
sp/sp_enclave/crypto/: crypto_utils.cpp  crypto_utils.h
sp/sp_enclave/httpparser/: httpresponseparser.h  response.h
sp/sp_enclave/utils/: base64.cpp  base64.h  cert_utils.cpp  cert_utils.h  io.cpp  io.h  urldecode.cpp
sp/sp_enclave/utils/x509_vfy/: cryptlib.h  ctype.h  dane.h  x509_int.h  x509_lcl.h  x509_vfy.c  x509_vfy.h
utils/: CMakeLists.txt  base64.c  common.cpp  common.h  fileio.c  hexdump.cpp  hexdump.h  hexutil.c  hexutil.cpp  msgio.cpp  msgio.h  rio.hpp  socket_log.cpp  socket_log.h
utils/cppcodec/test/: CMakeLists.txt
utils/message/: codec_io.hpp  message.cpp  message.h  msgio.cpp  rio.hpp  socket.hpp  socket_log.cpp
utils/sgx_utils/: search_shared_library.cpp  sgx_exception.h  sgx_exception.hpp  sgx_utils.cpp  sgx_utils.h
